updated project links

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 
         <div class="row">
           <div class="col-sm">
-            <img class="projectsimg" src="images/pamperhome.png" alt="Burning Airlines">
+            <img class="projectsimg" src="images/burninghome.png" alt="Burning Airlines">
             <a href="https://mmborres.github.io/burning_airlines_client/#/" target="_blank"><p class="projects">Burning Airlines</p></a>
             <a href="https://github.com/rashidabengali/burning_airlines_client" target="_blank"><p class="projects">CODE</p> </a>
           </div>
           <div class="col-sm">
-            <img class="projectsimg" src="images/burninghome.png" alt="Pamper My Pet">
+            <img class="projectsimg" src="images/pamperhome.png" alt="Pamper My Pet">
             <a href="https://rashidabengali.github.io/pamper_my_pet/#/" target="_blank"><p class="projects" >Pamper My Pet</p></a>
             <a href="https://github.com/pandyapurvi/pet_shop_react" target="_blank"><p class="projects">CODE</p> </a>
           </div>
