--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <div class="col-sm-8">
         <h1>Rashida Bengali</h1>
         <h3>Full Stack Developer</h3>
-        <button><a href="#">About Me <i class="fa fa-code" style="font-size: 20px; color:#00aced; font-weight:bold"></i></a></button>
-        <button><a href="#">My Projects <i class="fa fa-code" style="font-size: 20px; color:#00aced;font-weight:bold"></i></a></button>
-        <button><a href="#">My Skills <i class="fa fa-code" style="font-size: 20px; color:#00aced;font-weight:bold"></i></a></button>
-        <button><a href="#">Contact Me <i class="fa fa-code" style="font-size: 20px; color:#00aced;font-weight:bold"></i></a></button>
+        <button><a href="#aboutme">About Me <i class="fa fa-code" style="font-size: 20px; color:#00aced; font-weight:bold"></i></a></button>
+        <button><a href="#projectdetails">My Projects <i class="fa fa-code" style="font-size: 20px; color:#00aced;font-weight:bold"></i></a></button>
+        <button><a href="#skillset">My Skills <i class="fa fa-code" style="font-size: 20px; color:#00aced;font-weight:bold"></i></a></button>
+        <button><a href="#social">Contact Me <i class="fa fa-code" style="font-size: 20px; color:#00aced;font-weight:bold"></i></a></button>
       </div>
     </div>
   </nav>
@@ -36,10 +36,10 @@
     <header>
       <div class="row">
         <div class="col-sm-6">
-          <h2 class="animated infinite pulse delay-2s">Passion</h2>
+          <h2 id="aboutme" class="animated infinite pulse delay-2s">Passion</h2>
           <p>I am passionate about building and designing creative and user-friendly web applications. My problem-solving skills, adaptability, reliability, and self-motivation towards work make me a unique individual.</p>
           <p>Enjoy working in a team developing innovative software solutions while working on the latest technologies.</p>
-          <p>Eagerness to keep acquiring new skills and gain more knowledge.</p>
+          <p>Have an eagerness to keep acquiring new skills and gain more knowledge.</p>
         </div>
         <div class="col-sm-6">
           <h2 class="animated infinite pulse delay-2s">Hobbies</h2>
@@ -57,7 +57,7 @@
       <main>
         <div class="row">
           <div class="col-sm-8">
-            <h2 class="animated infinite pulse delay-2s">Projects</h2>
+            <h2 id="projectdetails" class="animated infinite pulse delay-2s">Projects</h2>
             <div class="row projectrow">
               <div class="col-sm-6 projdiv">
                 <img class="projectsimg" src="images/tictactoe.png" alt="Tic Tac Toe">
@@ -127,18 +127,25 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <h2 class="animated infinite pulse delay-2s">Skills</h2>
+            <h2 id="skillset" class="animated infinite pulse delay-2s">My Skills</h2>
             <span class="badge badge-pill badge-info">HTML5</span>
             <span class="badge badge-pill badge-info">CSS3</span>
             <span class="badge badge-pill badge-info">JavaScript</span>
             <span class="badge badge-pill badge-info">jQuery</span>
             <span class="badge badge-pill badge-info">UnderscoreJS</span>
             <span class="badge badge-pill badge-info">Ruby on Rails</span>
+            <span class="badge badge-pill badge-info">PostgreSQL</span>
+            <span class="badge badge-pill badge-info">Heroku</span>
             <span class="badge badge-pill badge-info">ReactJS</span>
             <span class="badge badge-pill badge-info">VueJS</span>
             <span class="badge badge-pill badge-info">NodeJS</span>
             <span class="badge badge-pill badge-info">ExpressJs</span>
             <span class="badge badge-pill badge-info">ThreeJs</span>
+            <span class="badge badge-pill badge-info">Firebase</span>
+            <span class="badge badge-pill badge-info">GraphQL</span>
+            <span class="badge badge-pill badge-info">GatsBy</span>
+            <span class="badge badge-pill badge-info">Meteor</span>
+            <span class="badge badge-pill badge-info">MongoDB</span>
             <span class="badge badge-pill badge-info">Public Speaking</span>
             <span class="badge badge-pill badge-info">Content Writing</span>
             <span class="badge badge-pill badge-info">Email Marketing</span>
