--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <span class="badge badge-pill badge-info">Ruby on Rails</span>
             <span class="badge badge-pill badge-info">PostgreSQL</span>
             <span class="badge badge-pill badge-info">Heroku</span>
+            <span class="badge badge-pill badge-info">Git</span>
             <span class="badge badge-pill badge-info">ReactJS</span>
             <span class="badge badge-pill badge-info">VueJS</span>
             <span class="badge badge-pill badge-info">NodeJS</span>
