--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="images/cutmypic.png"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
@@ -33,7 +33,7 @@
 
   <div id="about" class="container parallax-window zone" data-parallax="scroll" data-image-src="images/SEI_Rashida.jpg">
     <main>
-      <h2 class="animated infinite pulse delay-2s zone">Passion</h2>
+      <h2 class="animated fadeInDown delay-2s zone">Passion</h2>
       <p>I am passionate about building and designing creative and user-friendly web applications. My problem-solving skills, adaptability, reliability, and self-motivation towards work make me a unique individual.</p>
       <p>Enjoy working in a team developing innovative software solutions while working on the latest technologies.</p>
       <p>Have an eagerness to keep acquiring new skills and gain more knowledge.</p>
@@ -41,7 +41,7 @@
     </main>
 
     <aside>
-      <h2 class="animated infinite pulse delay-2s zone">Hobbies</h2>
+      <h2 class=" animated fadeInDown delay-2szone">Hobbies</h2>
       <p>I have the <span style="color:Chocolate">travel</span> bug
         <br>
         Love to explore new places and people and their food and culture. It increases my knowledge and broadens my worldview and acceptance toward others
@@ -113,7 +113,7 @@
   </div>
 
   <div id="skills" class="zone">
-    <h2 class="animated infinite pulse delay-2s"> Skills</h2>
+    <h2 class=" animated fadeInDown delay-2s zone"> Skills</h2>
     <i class="devicon-html5-plain-wordmark colored"></i>
     <i class="devicon-css3-plain-wordmark colored"></i>
     <i class="devicon-sass-original colored"></i>
@@ -133,7 +133,7 @@
     <i class="devicon-meteor-plain-wordmark colored"></i>
   </div>
 
-  <footer class="zone" id="contact">
+  <footer class="animated fadeInDown zone" id="contact">
     <ul id="social">
       <li class="end" ><a href="mailto:bengali.rashida@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
       <li class="end" ><a href="https://github.com/rashidabengali" target="_blank"><i class="fab fa-github"></i></a></li>
