--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="card zone" id="work">
       <img class="projectsimg" src="images/tictactoe.png" alt="Tic Tac Toe">
-      <div class="overlay">
+      <div class="overlay animated fadeInDown">
         <a class="zone" href="https://rashidabengali.github.io/tic-tac-toe/" target="_blank">DEMO</a>
         <a class="zone" href="https://github.com/rashidabengali/tic-tac-toe" target="_blank">CODE</a>
       </div>
@@ -73,7 +73,7 @@
 
     <div class="card zone">
       <img class="projectsimg" src="images/home.png" alt="Restaurants on Rails">
-      <div class="overlay">
+      <div class="overlay animated fadeInDown">
         <a class="zone" href="https://project1-rashida.herokuapp.com/" target="_blank">DEMO</a>
         <a class="zone" href="https://github.com/rashidabengali/Project1" target="_blank">CODE</a>
       </div>
@@ -88,7 +88,7 @@
 
     <div class="card zone">
       <img class="projectsimg" src="images/pamperhome.png" alt="Pamper My Pet">
-      <div class="overlay">
+      <div class="overlay animated fadeInDown">
         <a class="zone" href="https://rashidabengali.github.io/pamper_my_pet/#/" target="_blank">DEMO</a>
         <a class="zone" href="https://github.com/pandyapurvi/pet_shop_react" target="_blank">CODE</a>
       </div>
@@ -100,7 +100,7 @@
 
     <div class="card zone">
       <img class="projectsimg" src="images/home 2.png" alt="Speed Type">
-      <div class="overlay">
+      <div class="overlay animated fadeInDown">
         <a class="zone" href="https://rashidabengali.github.io/speed_type/#/" target="_blank">DEMO</a>
         <a class="zone" href="https://github.com/rashidabengali/speed_type" target="_blank">CODE</a>
       </div>
